видалив непотрібні раути по продуктах
